# custos

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  authority-manifest.json  hatch_build.py  index.html  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/rules/: authority-docs.md  code-style.md  common-errors.md  deviation-protocol.md  historical-lessons.md  mandatory-rules.md  progress-management.md  tech-stack.md  verification.md
.forge/: README.md  teams.yaml
.forge/marker/: 00a-runner.complete.json  00b-runner.complete.json  00c-runner.complete.json  03-runner.complete.json  03-worktree.complete.json
.forge/triage/: 00b-DEVIATION-triage.md  00c-DEVIATION-triage.md  03-DEVIATION-triage.md  04a-DEVIATION-triage.md  04b-fix-DEVIATION-triage.md  05a-DEVIATION-triage.md  05b-DEVIATION-triage.md  06a-DEVIATION-triage.md
.github/workflows/: docs-deploy.yml  promote-toolkit-rc.yml  release-toolkit-rc.yml  release.yml  toolkit-rc-reproducibility.yml
assets/css/: styles.3b6d8a0a.css
assets/js/: 02954f51.cdfe93aa.js  033fab88.19411cea.js  11343cf4.4344668b.js  13ff8c5d.f1fb9ce5.js  140d5747.a93cdf00.js  153e2069.13506c9f.js  153e2069.2ab10a96.js  169da4fa.b08a414a.js  17896441.0fa54901.js  1ad2bf07.c747a76e.js  1bf0a92f.06c1c367.js  1bf0a92f.4b6da27b.js  1df93b7f.6c6ecd42.js  2237.b18ccb6f.js  22dd74f7.1916d78f.js  2aad4dca.c8106c65.js  2d569983.c7347cd6.js  3436.c32dc759.js  389d8dcb.0f10b8c9.js  3a1f458c.8a2a3065.js  43382cc7.d8933bd6.js  44c832f6.5a567a54.js  50a3ccee.e2a52b2e.js  50a3ccee.ef7d6ae7.js  5197cd63.55da0965.js  58eb51e0.7fbe0279.js  59a9c148.7b42292b.js  59cd5330.c557d470.js  5e95c892.d42763df.js  65cec88f.79de475d.js  69e69b9f.03d5fc24.js  70640fd1.39119fc8.js  73208616.ce5af6dd.js  77b3c5a2.ed4261e3.js  7f23a818.4eb441dd.js  822b2552.ff424590.js  8722b21e.8e65deb5.js  90e12841.15becdfa.js  930df30a.17458628.js  930df30a.2c4e3d08.js  (+23 more)
concepts/: deployment-spec-vs-instance.html  g6-host-gate.html  reconcile-loop.html  runner-fact.html  trading-modes.html
docs/: credential_vault.md  domain.md  enrollment.md  lts-commitment.md  nats_client.md  reconcile.md  reproducible-build.md  telemetry_actor.md  upgrade-path.md
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/authority/: crucible-runner-command-consumer-assets-v1.json  crucible-runner-machine-request-consumer-assets-v1.json  crucible-runner-safety-policy-consumer-assets-v1.json  ecosystem-authority.json  runner-deployment-command-golden-v1.json  runner-deployment-command-golden-v1.json.sha256  runner-fact-capability-manifest-v1.json  runner-fact-capability-manifest-v1.json.sha256  runner-fact-capability-receipt-golden-v1.json  runner-fact-capability-receipt-golden-v1.json.sha256  runner-fact-contract-assets-v1.json  runner-fact-contract-assets-v1.json.sha256  runner-fact-contract-candidate-assets-v1.json  runner-fact-contract-candidate-assets-v1.json.sha256  runner-fact-golden-v1.json  runner-fact-golden-v1.json.sha256  runner-fact-parity-matrix-v1.json  runner-fact-parity-matrix-v1.json.sha256  runner-fact-sequence-continuation-v1.json  runner-fact-sequence-continuation-v1.json.sha256  runner-fact-signing-preimage-golden-v1.json  (+28 more)
engines/: engine-roadmap.html  nautilus-trader.html  noop.html
getting-started/: enrollment.html  first-deployment-spec.html  first-sandbox-run.html  installation.html
integration/: consuming-runner-fact.html  contract-versioning.html  gateway-contract-v1.html  reference-implementations.html  signing-deployment-spec.html
introduction/: architecture-at-a-glance.html  trust-model.html  what-is-custos.html
operator-guide/: credential-vault.html  deployment.html  emergency-playbook.html  readiness-health.html  runtime-log-observability.html  troubleshooting.html
reference/: cli.html  configuration.html  json-schema.html  nats-subjects.html
release-governance/: changelog.html  contributing.html  license.html  security-policy.html  semver-lts.html  upgrade-paths.html
scripts/: check-authority-docs.py  check-code-english.py  check-toolkit-extraction.py  check-toolkit-typing-baseline.py  check-toolkit-typing-closure.py  generate_runner_fact_candidate.py  generate_runner_fact_contract.py  generate_strategy_contract_assets.py  generate_wire_fixtures.py  install-hooks.sh  toolkit_rc_build.py  toolkit_rc_oci.py  toolkit_rc_promote.py  toolkit_rc_publish.py  toolkit_rc_release_readiness.py
tests/: _artifact_archive_fixtures.py  _artifact_verifier_fixtures.py  sigstore_crypto_fixture.py  test_artifact_archive_safety.py  test_artifact_bom_verifier.py  test_artifact_evidence_consumer.py  test_artifact_pre_import_composition.py  test_artifact_release_policy.py  test_artifact_runtime.py  test_artifact_sigstore_crypto.py  test_artifact_sigstore_verifier.py  test_artifact_verifier_kernel.py  test_authority_runtime_alignment.py  test_check_code_english.py  test_cli_deployment.py  test_cli_enroll.py  test_cli_start.py  test_cli_unknown_subcommand.py  test_cli_validators.py  test_cli_vault_put_verify.py  test_command_intake.py  test_credential_lifecycle.py  test_credential_vault.py  test_credential_vault_sops.py  test_crucible_nats_client.py  test_deployment_contract.py  test_deployment_reconciler.py  test_docker_entrypoint_help.py  test_docker_image_size.py  test_docker_non_root.py  test_docker_runtime_contract.py  test_enrollment.py  test_examples_docs_v020_alignment.py  test_g6_gate.py  test_g6_gate_capability_e2e.py  test_g6_gate_capability_integration.py  test_gateway_contract_v1_backward_compat.py  test_gateway_contract_v1_samples.py  test_gc_safety_invariant.py  test_heartbeat.py  (+85 more)
toolkit/: artifact-signing.html  overview.html  registry-mode-loading.html
trust-model/: audit-checklist.html  red-lines.html  rl1-key-kek-never-leaves.html  rl2-g6-gate-cannot-bypass.html  rl3-reconcile-disconnect.html  rl4-decimal-money-math.html  signed-release-chain.html
zh-Hans/: 404.html  index.html  sitemap.xml
(+649 files in other folders)
