[project]
name = "custos-runner"
version = "0.1.0"
description = "Custos: non-custodial self-hosted runner for the Alephain Guild ecosystem (NautilusTrader-adjacent, declarative reconcile + telemetry actor + local key vault)"
requires-python = ">=3.11"
dependencies = [
    "nats-py>=2.9",
    "pydantic>=2.5",
    "structlog>=24",
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# Production NautilusTrader host runtime. Heavy; kept optional so audit-only /
# paper-mode installs (NoopHost) don't pull it. NautilusTrader 1.227+ only
# supports Python >=3.12, so it is gated behind an environment marker: the base
# package stays installable on Python 3.11 (audit / paper), while nautilus
# resolves NautilusTrader only on 3.12+. Install with
# `uv sync --extra nautilus` (needs a 3.12+ interpreter) or
# `pip install custos-runner[nautilus]`.
nautilus = [
    "nautilus-trader>=1.227; python_version >= '3.12'",
    "pyyaml>=6",
    # Transitive pins for the vendored pandas_ta indicator library
    # (toolkit/vendor/pandas_ta). It imports `from pkg_resources import ...`
    # (removed from setuptools 70+) and `from packaging import ...`; without
    # these pins the vendored library fails to import at runtime.
    "setuptools>=50,<70",
    "packaging",
]
# Reserved slots for future engine backends (custos/engines/<name>/, see
# docs/engines/<name>.md onboarding stubs). Each fills in when its engine
# integration plan lands; empty until then so `uv sync --extra <name>` is a
# valid no-op rather than an error.
hummingbot = []
freqtrade = []
athanor = []
nt-rust = []
# Convenience umbrella pulling in every currently-implemented engine.
all-engines = [
    "custos-runner[nautilus]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# pip 分发名是 custos-runner (project.name), Python 导入名是 custos.
# 显式告诉 hatchling 打包 src/custos/.
packages = ["src/custos"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires provisioned external infrastructure (real testnet credential, network reachability); skips cleanly if unmet",
]

[tool.ruff]
# 与生态其他 Python 子系统 (synedrion) 一致的 line-length; custos 现有代码
# 也在 100 上下, 减少 subtree split 后无谓 fmt sweep.
line-length = 100
target-version = "py311"
# Vendored trees under toolkit/ are byte-identical snapshots of upstream
# projects (philosophers-stone shared/, MIT-licensed pandas_ta). Reformatting or
# linting them would drift them from the pinned upstreams and defeat the
# provenance-sync workflow (see TOOLKIT_PROVENANCE.md). Auditors read them as
# their own upstreams, not as custos code.
extend-exclude = ["src/custos/engines/nautilus/toolkit/shared", "src/custos/engines/nautilus/toolkit/vendor"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (Python 3.11+ syntax)
]
ignore = [
    "E501",  # line-too-long: 由 ruff format 兜底
    "B008",  # do not perform function calls in argument defaults (fastapi Depends 惯例)
]
