[project]
name = "custos-runner"
version = "0.2.0"
description = "Custos: non-custodial self-hosted runner for the Alephain Guild ecosystem (NautilusTrader-adjacent, declarative reconcile + telemetry actor + local key vault)"
requires-python = ">=3.11"
dependencies = [
    "nats-py>=2.9",
    "pydantic>=2.5",
    "structlog>=24",
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.20",
    "pyyaml>=6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# Production NautilusTrader host runtime. Heavy; kept optional so audit-only /
# paper-mode installs (NoopHost) don't pull it. NautilusTrader 1.227+ only
# supports Python >=3.12, so it is gated behind an environment marker: the base
# package stays installable on Python 3.11 (audit / paper), while nautilus
# resolves NautilusTrader only on 3.12+. Install with
# `uv sync --extra nautilus` (needs a 3.12+ interpreter) or
# `pip install custos-runner[nautilus]`.
nautilus = [
    "nautilus-trader>=1.227; python_version >= '3.12'",
    "pyyaml>=6",
    # Transitive pins for the vendored pandas_ta indicator library
    # (toolkit/vendor/pandas_ta). It imports `from pkg_resources import ...`
    # (removed from setuptools 70+) and `from packaging import ...`; without
    # these pins the vendored library fails to import at runtime.
    "setuptools>=50,<70",
    "packaging",
]
# Reserved slots for future engine backends (custos/engines/<name>/, see
# docs/engines/<name>.md onboarding stubs). Each fills in when its engine
# integration plan lands; empty until then so `uv sync --extra <name>` is a
# valid no-op rather than an error.
hummingbot = []
freqtrade = []
athanor = []
nt-rust = []
# Convenience umbrella pulling in every currently-implemented engine.
all-engines = [
    "custos-runner[nautilus]",
]
# Long-Term-Support / release-engineering toolchain (Plan 12): sigstore keyless
# wheel signing (T3) + pytest-docker helpers for the Docker-image test gates
# (T2). Explicit sigstore major pin (>=3.0,<4.0, Plan 12 H6): sigstore 3.x is
# the current stable line; a future 4.x is a breaking API bump and must land
# through a coordinated CI-workflow refresh, not a silent transitive upgrade.
lts = [
    "sigstore>=3.0,<4.0",
    "pytest-docker>=3",
]

[project.scripts]
# Single console entry — the pre-0.2.0 `custos` script was retired to avoid
# long-term dual-CLI drift; `python -m custos` still exits 2 with a pointer
# to `arx-runner start` (see src/custos/cli/main.py).
arx-runner = "custos.cli.subcommands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# pip 分发名是 custos-runner (project.name), Python 导入名是 custos.
# 显式告诉 hatchling 打包 src/custos/.
packages = ["src/custos"]

# Plan 12 T8 reproducible-build hook. The Python file `hatch_build.py` at the
# repo root exports a hatchling `BuildHookInterface` subclass that honours the
# `SOURCE_DATE_EPOCH` environment variable so `uv build` produces
# bytes-identical wheels across rebuilds. hatchling >= 1.20 already respects
# `SOURCE_DATE_EPOCH` natively; the hook is a defence-in-depth belt so a
# hatchling downgrade or a future opt-out flag does not silently disable the
# reproducibility guarantee.
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
package = true
# sigstore-python 3.x pulls `sigstore-protobuf-specs` from PyPI as a
# pre-release build (0.3.3.dev-family), so resolving the `lts` extra with the
# default uv setting fails ("pre-releases weren't enabled"). This lock is
# release-engineering-adjacent and won't leak into the default `dev` sync path
# (uv only installs what a given `--extra` selects), but the resolver still
# walks every optional-dependencies group when building the lock.
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires provisioned external infrastructure (real testnet credential, network reachability); skips cleanly if unmet",
    "docker: requires a functional Docker daemon reachable from the test host; Plan 12 T2 Docker image contract gates",
    "ci_only: requires GitHub Actions OIDC (sigstore keyless signing); Plan 12 T3 wheel-signature contract; local runs skip",
    "slow: expensive (double `uv build` reproducibility test, minutes-scale); Plan 12 T8 nightly CI job",
]

[tool.ruff]
# 与生态其他 Python 子系统 (synedrion) 一致的 line-length; custos 现有代码
# 也在 100 上下, 减少 subtree split 后无谓 fmt sweep.
line-length = 100
target-version = "py311"
# Vendored trees under toolkit/ are byte-identical snapshots of upstream
# projects (philosophers-stone shared/, MIT-licensed pandas_ta). Reformatting or
# linting them would drift them from the pinned upstreams and defeat the
# provenance-sync workflow (see TOOLKIT_PROVENANCE.md). Auditors read them as
# their own upstreams, not as custos code.
extend-exclude = ["src/custos/engines/nautilus/toolkit/shared", "src/custos/engines/nautilus/toolkit/vendor"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (Python 3.11+ syntax)
]
ignore = [
    "E501",  # line-too-long: 由 ruff format 兜底
    "B008",  # do not perform function calls in argument defaults (fastapi Depends 惯例)
]
